<resources>
    <string name="app_name">MyFonoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyFonoApp</string>
    <string name="nav_header_subtitle">by Laurenz Jannes</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="infotitel">Info</string>
    <string name="welkom">Welkom! Maak eerst je keuze in de instellingen daarna kan je het spel spelen.</string>
    <string name="btnSpel1">Luister goed!</string>
    <string name="btnSpel2">Zeg het zelf eens</string>
    <string name="btnInstelling">Instellingen</string>
    <string name="txtfono">Fonologisch proces en doelklanken</string>
    <string name="txtselect">Selecteer wat je wil oefenen</string>
    <string name="fronting">Fronting</string>
    <string name="stopping">Stopping</string>
    <string name="finaal">Finaal</string>
    <string name="initiaal">Initiaal</string>
    <string name="txtdoelklank">Doelklank</string>
    <string name="kt">K-T</string>
    <string name="gs">G-S</string>
    <string name="ngn">NG-N</string>
    <string name="st">S-T</string>
    <string name="cht">CH-T</string>
    <string name="gk">G-K</string>
    <string name="szt">S/Z-T</string>
    <string name="ft">F-T</string>
    <string name="opslaan">Keuze opslaan</string>
    <string name="gsv">G-S/V</string>
    <string name="button">button</string>
    <string name="startpagina">Startpagina</string>
    <string name="keuze">Keuze</string>
    <string name="medaillemuur">Medaillemuur</string>
    <string name="front">Fronting: Het kind spreekt een klank, die vanachter in de mond uitgesproken moet worden (bv: /k/), vooraan in de mond uit (bv: /t/). Bv: toe i.p.v. koe</string>
    <string name="info">Info</string>
    <string name="oefenen">klik op de woordjes dan kan je zien waarop we gaan oefenen.</string>
    <string name="fin">Finaal: achteraan het woord.</string>
    <string name="ini">Initiaal: vooraan het woord</string>
    <string name="stop">Stopping: Het kind ‘stopt’ een klank die je normaal gezien lang moet aanhouden (bv: /s/). Bv: kat i.p.v. gat</string>
    <string name="fono">Fonologie is het deel van de taalwetenschap dat de kleinste, nog betekenis genererende onderdelen (klanken) van de gesproken taal bestudeert. Deze kleinste, nog betekenis genererende spraakklanken noemt men in de linguïstiek "fonemen".</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

