<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_startpagina"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/startpagina" />
        <item
            android:id="@+id/nav_keuze"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/keuze" />
        <item
            android:id="@+id/nav_medaillemuur"
            android:icon="@drawable/ic_thumb_up_black_24dp"
            android:title="@string/medaillemuur" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:title="@string/info" />
    </group>


</menu>
