<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfoFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/infotitel"
        android:textSize="25sp"/>

        <TextView
            android:id="@+id/fono"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fono"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/fron"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/front"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/stop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stop"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/fin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fin"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:id="@+id/ini"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ini"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>
</FrameLayout>