<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtselect"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtfonoproces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtfono"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"
            android:textSize="17sp"
            android:layout_below="@+id/titel"/>

        <RadioGroup
            android:id="@+id/rgfonoproces1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtfonoproces"
            android:paddingTop="5dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbFronting"
                android:text="@string/fronting"
                android:textSize="16sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbStopping"
                android:text="@string/stopping"
                android:textSize="16sp"
                />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rgfonoproces2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rgfonoproces1"
            android:paddingTop="10dp"
            >

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbFinaal"
                android:text="@string/finaal"
                android:textSize="16sp"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbInitiaal"
                android:text="@string/initiaal"
                android:textSize="16sp"
                />
        </RadioGroup>

        <TextView
            android:id="@+id/txtDoelklank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtdoelklank"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"
            android:textSize="17sp"
            android:layout_below="@+id/rgfonoproces2"/>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>