<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KeuzeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >

        <TextView
            android:id="@+id/titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtselect"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/txtfonoproces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtfono"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:textSize="17sp"
            android:layout_below="@+id/titel"/>

        <TextView
            android:id="@+id/txtfronting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fronting"
            android:layout_centerHorizontal="true"
            android:paddingTop="5dp"
            android:textSize="17sp"
            android:layout_below="@+id/txtfonoproces"/>

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txtfronting">
            <LinearLayout
                android:id="@+id/ll2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txtfinaal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finaal"
                    android:paddingTop="20dp"
                    android:textSize="17sp"
                    />

                <RadioGroup
                    android:id="@+id/g1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbK-T-fin"
                        android:text="@string/kt"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbG-S"
                        android:text="@string/gs"
                        android:textSize="16sp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbNG-N"
                        android:text="@string/ngn"
                        android:textSize="16sp"
                        />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtinitiaal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initiaal"
                    android:paddingTop="20dp"
                    android:textSize="17sp"
                    />

                <RadioGroup
                    android:id="@+id/g2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbK-T-ini"
                        android:text="@string/kt"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbG-S-V"
                        android:text="@string/gsv"
                        android:textSize="16sp"
                        />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>




        <TextView
            android:id="@+id/txtstopping"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopping"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"
            android:textSize="17sp"
            android:layout_below="@+id/ll1"/>

        <LinearLayout
            android:id="@+id/ll5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/txtstopping">
            <LinearLayout
                android:id="@+id/ll6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical"
                >
                <TextView
                    android:id="@+id/txtfinaal2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/finaal"
                    android:paddingTop="20dp"
                    android:textSize="17sp"
                    />

                <RadioGroup
                    android:id="@+id/g3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbS-T"
                        android:text="@string/st"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbCH-T"
                        android:text="@string/cht"
                        android:textSize="16sp"
                        />
                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txtinitiaal2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/initiaal"
                    android:paddingTop="20dp"
                    android:textSize="17sp"
                    />

                <RadioGroup
                    android:id="@+id/g4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    >

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbG-K"
                        android:text="@string/gk"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbS-Z-T"
                        android:text="@string/szt"
                        android:textSize="16sp"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/rbF-T"
                        android:text="@string/ft"
                        android:textSize="16sp"
                        />
                </RadioGroup>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btnKeuzeOpslaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/opslaan"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/background_light"
            tools:targetApi="lollipop"
            android:layout_below="@id/ll5"
            android:layout_marginTop="20dp"/>
    </RelativeLayout>
    </ScrollView>
</FrameLayout>