<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartpaginaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="18dp"
        android:paddingTop="18dp"
        android:paddingRight="18dp">

        <TextView
            android:id="@+id/welkom"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:text="@string/welkom"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btninstelling"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/btnInstelling"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/background_light"
            tools:targetApi="lollipop"
            android:layout_below="@id/welkom"
            />
        <Button
            android:id="@+id/btnspel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/btnSpel1"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/background_light"
            tools:targetApi="lollipop"
            android:layout_below="@id/btninstelling"
            />
        <Button
            android:id="@+id/btnspel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/btnSpel2"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@android:color/background_light"
            tools:targetApi="lollipop"
            android:layout_below="@id/btnspel1"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hiddenkeuze"
            android:layout_below="@id/btnspel2"
            android:visibility="visible"/>

    </RelativeLayout>
</FrameLayout>